qdrant_deploy/3_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vector-db-service
spec:
  selector:
    app: vector-db
  ports:
    - protocol: TCP
      port: 6333
      targetPort: 6333
