qdrant_deploy/4_route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: qdrant
  labels: {}
spec:
  to:
    kind: Service
    name: vector-db-service
  tls: null
  port:
    targetPort: 6333
